# inference-engine-

./: CMakeLists.txt  README.md
cpu_ops/: __init__.py  ops.py
docs/: GQA_KV_and_Weights_Fix.txt
examples/: debug_mistral.cpp  fast_logits.cpp  inspect_and_bench.py  inspect_safetensors.cpp  load_mistral.cpp  player.cpp  run_greedy_cpu.cpp  run_mistral_inference.cpp  test_gqa_minimal.cpp  text_gen.cpp
include/infer_engine/core/: tensor.hpp  tensor2.hpp  types.hpp
include/infer_engine/io/: model_loader.hpp  safetensors_reader.hpp
include/infer_engine/layers/: attention_forward.hpp  mlp_forward.hpp
include/infer_engine/layers/ops/: activations.hpp  elementwise.hpp  linear.hpp  matmul.hpp  reshape.hpp  rmsnorm.hpp  rope.hpp  softmax.hpp
include/infer_engine/model/: config.hpp  weights.hpp
include/infer_engine/runtime/: kv_cache.hpp  runtime_ctx.hpp
model/: __init__.py  config.py  weights.py
safetensors/: __init__.py  reader.py  write_min.py
src/core/: tensor.cpp
src/io/: bf16_converter.cpp  bf16_converter.hpp  model_loader.cpp  safetensors_reader.cpp
src/layers/: attention_forward.cpp  mlp_forward.cpp
src/layers/cuda/: attention_kernel.cu  gelu_kernel.cu  layer_norm_kernel.cu  linear_kernel.cu  softmax_kernel.cu
src/layers/ops/: activations.cpp  elementwise.cpp  linear.cpp  matmul.cpp  reshape.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp
src/model/: config.cpp  weights.cpp
src/runtime/: kv_cache.cpp  runtime_ctx.cpp
tests/: test_cpu_ops.py  test_mmap_ro.py  test_model_binding.py  test_safetensors_reader.py
tests/unit/: test_attention_mlp.cpp  test_cpp_ops.cpp  test_kv_cache.cpp  test_runtime_ctx.cpp
tools/: download_mistral_fp16.py  download_tiny_gpt2.py
utils/: __init__.py  mmap_ro.py
